# wxwidgets-template-clion

./: CMakeLists.txt  CMakeStarter-wxWidgets.txt  README.md  cApp.cpp  cApp.h  cMain.cpp  cMain.h  info.txt  main.cpp
HeaderFiles/: cApp.h  cMain.h
SourceFiles/: cApp.cpp  cMain.cpp
